--- a/02-cost-control/package.json
+++ b/02-cost-control/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-swipeable-list": "^1.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
+    "@types/react-circular-progressbar": "^1.1.0",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
